--- a/images/styles/style.css
+++ b/images/styles/style.css
@@ -1,57 +1,40 @@
-*{
-    margin: 0px;
+body{
+    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;   
 }
-.header-container{
-    background-image: url('../header_bg.png'),url(../developer.png);
-    background-repeat: no-repeat;
-    background-position: right bottom,left;
-    background-color: bisque;
-    height: 700px;
-    width: 1400px;
-    
-    
-}
-.nav-container{
-    font-family: 'EB Garamond', serif;
-font-family: 'Lato', sans-serif;
-font-family: 'Manrope', sans-serif;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Poppins', sans-serif;
-
-
-}
-.nav-title{
+nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
- 
+}
+.nav-title{
+    font-size: 45px;
+    font-weight: 800;
+}
+.text-primary{
+    color: rgb(155, 69, 8);
+}
+nav >ul{
+    display: flex;
+    align-items: center;
     
 }
-.menus{
-    display: flex;
+nav li{
     list-style: none;
-    gap: 20px;
-    align-items: center;
+    margin-right: 50px;
 }
-.header{
-    font-weight: bold;
-    font-size: 40px;
-}
-.color{
-    color: darkorange;
+nav a{
+    text-decoration: none;
 }
 .btn-primary{
-    background-color: rgb(192, 94, 58);
-    color: white;
-    border: none;
     border-radius: 5px;
-    padding: 10px 8px;
-   
-}
-.header-section{
-    display: flex;
-}
-.header-img{
-    width: 400px;
-    height: 700px;
+    background: rgb(179, 83, 49);
+    border: none;
+    color: white;
+    background-color: chocolate;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px 35px;
+
+ 
 }
