--- a/images/styles/style.css
+++ b/images/styles/style.css
@@ -6,6 +6,7 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin: 0px 200px;
 }
 .nav-title{
     font-size: 45px;
@@ -35,6 +36,28 @@ nav a{
     font-size: 20px;
     font-weight: 700;
     padding: 15px 35px;
-
- 
+}
+.header{
+    background: rgb(220, 189, 176);
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.btn-contact{
+    border-radius: 5px;
+    background: rgb(179, 83, 49);
+    border: none;
+    color: chocolate;
+    background-color: white;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px 35px;
+}
+.header-img{
+    width: 500px;
+}
+.banner-content{
+    
 }
