--- a/images/styles/style.css
+++ b/images/styles/style.css
@@ -80,3 +80,33 @@ max-width: 500px;
 .banner-description{
 
 }
+main{
+  max-width: 1140px; 
+  margin: 0 auto; 
+}
+.section-title{
+    color: rgb(40, 38, 38);
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: rgb(201, 201, 222);
+    margin: 130px 150px;
+}
+.section-description{
+    color: rgb(85, 76, 76);
+    text-align: center;
+    font-size: 18px;
+}
+.about-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.about-info{
+    text-align: center;
+}
