--- a/images/styles/style.css
+++ b/images/styles/style.css
@@ -84,6 +84,9 @@ main{
   max-width: 1140px; 
   margin: 0 auto; 
 }
+main section{
+    margin-top: 120px;
+}
 .section-title{
     color: rgb(40, 38, 38);
     text-align: center;
@@ -109,4 +112,22 @@ main{
 }
 .about-info{
     text-align: center;
+}
+#what-i-do-description{
+padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+    /* align-items: center;
+    justify-content: space-around; */
+}
+.skill-description{
+   color: rgb(20, 20, 20);
+}
+.skill{
+   padding: 30px;
+   border-radius: 5px;
+   background: rgb(73, 73, 95);
+   box-shadow: 0px 6px 50px 0px rgba(17, 16, 16,0.06);
 }
