--- a/images/styles/style.css
+++ b/images/styles/style.css
@@ -131,3 +131,28 @@ padding: 30px 150px;
    background: rgb(73, 73, 95);
    box-shadow: 0px 6px 50px 0px rgba(17, 16, 16,0.06);
 }
+.resume-colum-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+.resume-container{
+display: flex;
+gap: 35px;
+margin: 15px 40px 15px 40px;
+}
+.resume-item-description, .resume-item-institute{
+    color: #757575;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.download-cv{
+    text-align: center;
+    margin-top: 30px;
+    
+}
+
