--- a/images/styles/style.css
+++ b/images/styles/style.css
@@ -153,6 +153,27 @@ margin: 15px 40px 15px 40px;
 .download-cv{
     text-align: center;
     margin-top: 30px;
-    
+    }
+    footer{
+        display:flex ;
+        gap: 100px;
+        background: rgb(237, 199, 199);
+        margin-top: 100px;
+        padding: 130px 200px;
+        
+    }
+    .footer-colum{
+        width: 50%;
+        gap: 100px;
+    }
+    .contact-form input[type='text'], input[type='email'],textarea{
+        display: block;
+        margin-bottom: 25px;
+        padding: 18px 35px;
+        color: #757575;
+        border-radius: 5px;
+        background: white;
+        border: 0px;
+        width: 100%;
 }
 
