--- a/images/styles/style.css
+++ b/images/styles/style.css
@@ -176,4 +176,48 @@ margin: 15px 40px 15px 40px;
         border: 0px;
         width: 100%;
 }
+@media screen and (max-width: 576px) {
+    .header{
+        background-image: none;
+    }
+    .nav,
+    nav> ul,
+    .banner,
+    .skills-container,.about-info-container{
+        flex-direction: column;
+    }
+    nav .ul{
+        gap: 10px;
+    }
+    .header-img{
+        width: 100%;
+    }
+    .banner,
+    #what-i-do-description{
+        padding: 20px;
+    }
+    .btn-primary{
+        margin-bottom: 15px;
+    }
+    .resume-container{
+        flex-direction: column;
+        padding: 10px;
+    }
+    .footer,.about{
+        flex-direction: column;
+        /* padding: 10px; */
+    }
+    .footer-colum{
+        width: 100%;
+    }
+    .contact-form input[type='text'], input[type='email'],textarea{
+        width: 80%;
+}
+
+}
+@media screen and (min-width:576px) and (max-width:992px) {
+    .btn-primary{
+        margin-bottom: 15px;
+    }
+}
 
